# daquiri-qpx

./: .travis.yml  conanfile.txt
source/: CMakeLists.txt
source/cmd/: CMakeLists.txt
source/consumers/dataspaces/: dense_matrix2d.h  sparse_matrix2d.h
source/core/: CMakeLists.txt  consumer.cpp  consumer.h  dataspace.h  detector.cpp  importer.h  importer_factory.cpp  importer_factory.h
source/core/calibration/: CMakeLists.txt  abstract_poly.cpp  abstract_poly.h  calib_function_factory.cpp  calib_function_factory.h  calibration.cpp  calibration.h  coef_function.cpp  coef_function.h  function.h  function_factory.cpp  function_factory.h  polynomial.cpp  polynomial.h  sqrt_poly.cpp  sqrt_poly.h
source/core/fitting/: CMakeLists.txt  abstract_optimizer.h  finder.cpp  finder.h  fit_evaluation.cpp  fit_evaluation.h  fit_settings.cpp  fit_settings.h  fittable_function.h  fittable_region.cpp  fittable_region.h  fitter.cpp  fitter.h  gaussian.cpp  gaussian.h  hypermet.cpp  hypermet.h  optimizer.cpp  optimizer.h  peak.cpp  peak.h  region_eval.cpp  region_eval.h  region_manager.cpp  region_manager.h  roi.cpp  roi.h  sum4.cpp  sum4.h  uncertain.cpp  uncertain.h  weighted_data.cpp  weighted_data.h
source/core/fitting/BFGS/: BFGS.cpp  BFGS.h  CMakeLists.txt  Fittable.h  dlib.cpp  dlib.h
source/core/fitting/data_model/: CMakeLists.txt  data_model.cpp  data_model.h  value.cpp  weight_strategies.cpp  weight_strategies.h  weighted_data.cpp  weighted_data.h
source/core/fitting/finders/: CMakeLists.txt  finder.cpp  finder.h  finder_kon_calibrated.cpp  finder_kon_calibrated.h  finder_kon_naive.cpp  finder_kon_naive.h
source/core/fitting/hypermet/: CMakeLists.txt  Calibration.cpp  Calibration.h  EfficiencyCal.cpp  EfficiencyCal.h  GaussianPrecalc.cpp  GaussianPrecalc.h  Hypermet.cpp  Hypermet.h  NonlinearityCal.cpp  NonlinearityCal.h  Peak.cpp  Peak.h  PolyBackground.cpp  PolyBackground.h  Region.cpp  Region.h  Spectrum.cpp  Spectrum.h  Step.cpp  Step.h  Tail.cpp  Tail.h  Value.cpp  Value.h
source/core/fitting/nuclides/: CMakeLists.txt  nuclide.cpp  nuclide.h  std_importer.cpp  std_importer.h  transition.cpp  transition.h
source/core/fitting/optimizers/: BFGS.cpp  BFGS.h  CMakeLists.txt  abstract_optimizer.h  brent.cpp  brent.h  dlib_adapter.cpp  dlib_adapter.h  fit_result.cpp  fit_result.h  fit_results.h  fittable_function.h  gsl_adapter.cpp  gsl_adapter.h  optlib_adapter.cpp  optlib_adapter.h
source/core/fitting/parameter/: CMakeLists.txt  abstract_bounded_param.cpp  abstract_bounded_param.h  abstract_param.cpp  abstract_param.h  atan_bounded_param.cpp  atan_bounded_param.h  positive_param.cpp  positive_param.h  sine_bounded_param.cpp  sine_bounded_param.h  unbounded_param.cpp  unbounded_param.h
source/core/fitting/sum4/: CMakeLists.txt  sum4.cpp  sum4.h  sum4edge.cpp  sum4edge.h
source/core/gamma/: CMakeLists.txt  fit_evaluation.cpp  fit_evaluation.h  fit_settings.cpp  fit_settings.h  fitter.cpp  fitter.h  region_manager.cpp  region_manager.h  rendering.cpp  rendering.h
source/core/gamma/finders/: finder.cpp  finder.h  finder_kon_calibrated.cpp  finder_kon_calibrated.h  finder_kon_naive.cpp  finder_kon_naive.h
source/core/gamma/hypermet/: CMakeLists.txt  gamma_region.cpp  gamma_region.h  gaussian_precalc_values.cpp  gaussian_precalc_values.h  peak.cpp  peak.h  poly_background.cpp  (+5 more)
source/core/util/: CMakeLists.txt  eigen_fix.h  h5json.h  more_math.h  string_extensions.h  visualize_vector.h
source/gui/: CMakeLists.txt  daquiri.cpp  daquiri.h  main.cpp
source/gui/analysis/: CMakeLists.txt  form_analysis_1d.cpp  form_analysis_1d.h  form_analysis_1d.ui  form_efficiency_calibration.cpp  form_efficiency_calibration.h  form_efficiency_calibration.ui  form_energy_calibration.cpp  form_energy_calibration.h  form_energy_calibration.ui  form_fit_results.cpp  form_fit_results.h  form_fit_results.ui  form_fwhm_calibration.cpp  form_fwhm_calibration.h  form_fwhm_calibration.ui  isotope.cpp  isotope.h  widget_isotopes.cpp  widget_isotopes.h  widget_isotopes.ui  widget_plot_calib.cpp  widget_plot_calib.h  xmlable.h
source/gui/daq/: ProjectForm.cpp  ProjectForm.h  ProjectView.cpp  ProjectView.h  ProjectView.ui
source/gui/fitter/: CMakeLists.txt  FormFitter.cpp  FormFitter.h  FormFitter.ui  FormFitterSettings.cpp  FormFitterSettings.h  FormFitterSettings.ui  FormPeakInfo.cpp  FormPeakInfo.h  FormPeakInfo.ui  WidgetFitterAutoselect.cpp  WidgetFitterAutoselect.h  fit_parameter_widget.cpp  fit_parameter_widget.h  peak_dialog.cpp  peak_dialog.h  peak_dialog.ui  peak_skew_widget.cpp  peak_skew_widget.h  qp_fitter.cpp  qp_fitter.h  qp_range_selector.cpp  qp_range_selector.h  region_dialog.cpp  region_dialog.h  region_dialog.ui  rollback_dialog.cpp  rollback_dialog.h  thread_fitter.cpp  thread_fitter.h  uncertain_double_widget.cpp  uncertain_double_widget.h
source/gui/resources/: daquiri.qrc
source/importers/: CMakeLists.txt  ImporterAVA.cpp  ImporterAVA.h  ImporterCHN.cpp  ImporterCHN.h  ImporterCNF.cpp  ImporterCNF.h  ImporterMCA.cpp  ImporterMCA.h  ImporterN42.cpp  ImporterN42.h  ImporterSPC.cpp  ImporterSPC.h  ImporterTKA.cpp  ImporterTKA.h  importers_autoreg.cpp  importers_autoreg.h  string_to_chans.cpp  string_to_chans.h
source/importers/xylib/: xylib.cpp
source/optimizerBFGS/: BFGS.cpp  BFGS.h  CMakeLists.txt  Calibration.cpp  Calibration.h  EfficiencyCal.cpp  EfficiencyCal.h  NonlinearityCal.cpp  NonlinearityCal.h  Peak.cpp  Peak.h  Region.cpp  Region.h  Spectrum.cpp  Spectrum.h  SpectrumIO.cpp  SpectrumIO.h  Step.cpp  Step.h  Tail.cpp  Tail.h  Value.cpp  Value.h  more_math.h  optimizer_bfgs.cpp  optimizer_bfgs.h
source/optimizerROOT/: CMakeLists.txt  optimizer_ROOT.cpp  optimizer_ROOT.h  wrapper_ROOT.cpp  wrapper_ROOT.h
source/producers/: CMakeLists.txt  producers_autoreg.cpp
source/producers/Pixie4/: CMakeLists.txt  pixie4.cpp  pixie4.h  pixie4_api_wrapper.cpp  pixie4_api_wrapper.h
tests/core/fitting/: CMakeLists.txt  clever_hist.cpp  clever_hist.h  fit_evaluation.cpp  fittable_region.cpp  function_test.cpp  function_test.h  simple_functions.h  weighted_data.cpp
(+132 files in other folders)
